language/move-lang/tests/move_check/typing/implicit_deref_borrow_field_not_copyable.exp
error: 

   ┌── tests/move_check/typing/implicit_deref_borrow_field_not_copyable.move:7:10 ───
   │
 7 │         (b.s: S);
   │          ^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
   ·
 4 │     struct B { s: S, r: R }
   │                   - The type '0x8675309::M::S' is not implicitly copyable. Implicit copies are limited to simple primitive values
   │

error: 

   ┌── tests/move_check/typing/implicit_deref_borrow_field_not_copyable.move:8:15 ───
   │
 8 │         R{} = b.r;
   │               ^^^ Invalid implicit copy of field 'r'. Try adding '*&' to the front of the field access
   ·
 4 │     struct B { s: S, r: R }
   │                         - The type '0x8675309::M::R' is not implicitly copyable. Implicit copies are limited to simple primitive values
   │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_not_copyable.move:10:10 ───
    │
 10 │         (bref.s: S);
    │          ^^^^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
    ·
  4 │     struct B { s: S, r: R }
    │                   - The type '0x8675309::M::S' is not implicitly copyable. Implicit copies are limited to simple primitive values
    │

error: 

    ┌── tests/move_check/typing/implicit_deref_borrow_field_not_copyable.move:11:15 ───
    │
 11 │         R{} = bref.r;
    │               ^^^^^^ Invalid implicit copy of field 'r'. Try adding '*&' to the front of the field access
    ·
  4 │     struct B { s: S, r: R }
    │                         - The type '0x8675309::M::R' is not implicitly copyable. Implicit copies are limited to simple primitive values
    │

