language/move-lang/tests/move_check/typing/implicit_deref_borrow_field_not_copyable.move
module 0x8675309::M {
    struct R {}
    struct S has copy, drop {}
    struct B { s: S, r: R }

    fun t1(b: B, bref: &B) {
        (b.s: S);
        R{} = b.r;

        (bref.s: S);
        R{} = bref.r;
    }

}
